--- a/domain.yml
+++ b/domain.yml
@@ -6,6 +6,25 @@ intents:
   - mood_great
   - mood_unhappy
   - bot_challenge
+  - inform
+  - search_provider
+
+entities:
+  - location
+  - facility_type
+
+actions:
+  - utter_how_can_i_help
+  - utter_ask_location
+  - action_facility_search
+
+slots:
+  location:
+    type: text
+  facility_type:
+    type: text
+  address:
+    type: unfeaturized
 
 responses:
   utter_greet:
@@ -26,6 +45,14 @@ responses:
 
   utter_iamabot:
   - text: "I am a bot, powered by Rasa."
+
+  utter_how_can_i_help:
+    - text: "Hello. I am a medicare locator. I can help you find nearset hospital. How can I help?"
+    - text: "Hi. My name is medicare locator. How can I help you today?"
+  
+  utter_ask_location:
+    - text: "Can you provide your location please?"
+    - text: "To find the nearest {facility_type} I need your address."
 
 session_config:
   session_expiration_time: 60
